--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -1,7 +1,10 @@
-<h1>{{ user$.name }}</h1>
+<!-- Wrapper div w/ *ngIf checks for data first before trying to data bind and display, helps avoid issues w/ undefined user property data -->
+<div *ngIf="user$">
+    <h1>{{ user$.name }}</h1>
 
-<ul>
-    <li><strong>Username:</strong> {{ user$.username }}</li>
-    <li><strong>Email:</strong> {{ user$.email }}</li>
-    <li><strong>Phone:</strong> {{ user$.phone }}</li>
-</ul>
+    <ul>
+        <li><strong>Username:</strong> {{ user$.username }}</li>
+        <li><strong>Email:</strong> {{ user$.email }}</li>
+        <li><strong>Phone:</strong> {{ user$.phone }}</li>
+    </ul>
+</div>
